// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ontario-badge should override the host textContent with label prop output on the span element 1`] = `
<ontario-badge label="completed">
  <template shadowrootmode="open">
    <span class="ontario-badge ontario-badge--default-heavy">
      completed
    </span>
  </template>
  In progress
</ontario-badge>
`;

exports[`ontario-badge should render the aria-label attribute on the span element 1`] = `
<ontario-badge aria-label-text="This course is currently in progress.">
  <template shadowrootmode="open">
    <span aria-label="This course is currently in progress." class="ontario-badge ontario-badge--default-heavy">
      In progress
    </span>
  </template>
  In progress
</ontario-badge>
`;

exports[`ontario-badge should render the expected base html 1`] = `
<ontario-badge>
  <template shadowrootmode="open">
    <span class="ontario-badge ontario-badge--default-heavy">
      In progress
    </span>
  </template>
  In progress
</ontario-badge>
`;

exports[`ontario-badge should render with the ontario-badge--default-light class on the span element 1`] = `
<ontario-badge colour="lightTeal">
  <template shadowrootmode="open">
    <span class="ontario-badge ontario-badge--default-light">
      In progress
    </span>
  </template>
  In progress
</ontario-badge>
`;
